cloudformation/ecs-deployment-host.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: ELK Stack using ECS cluster with instance

Metadata:
  InfraCreationCLI:
    Description: "aws --profile MY-PROFILE cloudformation deploy --template-file ecs-deployment-host.yaml --stack-name ecs-elk --parameter-overrides $(cat parameters-host.cfg) --capabilities CAPABILITY_IAM"
  InfraDeletionCLI:
    Description: "aws --profile MY-PROFILE cloudformation delete-stack --stack-name ecs-elk"
  ServiceToggleCLI:
    Description: "aws --profile MY-PROFILE ecs update-service --cluster TODO --service TODO --desired-count TODO"

Parameters:
  CpuType:
    Type: String
    Description: Choose a CPU type starting on 4 GiB
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Target VPC
  Keypair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Required EC2 Keypair
  EcsClusterName:
    Type: String
    Description: >
      Specifies the ECS Cluster Name with which the resources would be
      associated
  EcsServiceName:
    Type: String
    Description: >
      Specifies the ECS Cluster Name with which the resources would be
      associated
  ApplicationSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Target subnets for EC2 instances
  LatestAmiId:
    Type: String
    Default: 'ami-0e9347664c1c5ed65'
    Description: ECS Optimized AMI
  MyInternetIP:
    Type: String
    Description: The local internet address, CIDR formatted.
  ImgLogstash:
    Type: String
    Description: Logstash Docker Image
  ImgKibana:
    Type: String
    Description: Kibana Docker Image
  ImgElasticsearch:
    Type: String
    Description: Elasticsearch Docker Image

Resources:

#################
## EC2
#################

  ApplicationAutoscalingLaunchECSConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        config:
          commands:
            05_public_volume:
              command: mkdir -p /data/public
            06_public_volume_permissions:
              command: chown -R 1000:1000 /data/public
            10_first_run:
              command: sh firstrun.sh
              cwd: /home/ec2-user
              env:
                ECS_CLUSTER: !Ref ApplicationCluster
                STACK_NAME: !Ref AWS::StackName
                AUTOSCALING_GROUP: ApplicationAutoscaling
                AWS_DEFAULT_REGION: !Ref AWS::Region
    Properties:
      AssociatePublicIpAddress: true
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref CpuType
      KeyName: !Ref Keypair
      IamInstanceProfile: !Ref ApplicationAutoscalingInstanceProfile
      SecurityGroups:
        - !Ref ApplicationAutoscalingSecurityGroup
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash
            echo ECS_CLUSTER=elk-cluster >> /etc/ecs/ecs.config

            # Workaround to avoid startup error on ES
            sysctl -w vm.max_map_count=262144

            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} \
              --resource ApplicationAutoscalingLaunchECSConfiguration \
              --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} \
              --resource ApplicationAutoscaling \
              --region ${AWS::Region}

  ApplicationAutoscaling:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchConfigurationName: !Ref ApplicationAutoscalingLaunchECSConfiguration
      MinSize: 0
      MaxSize: 2
      DesiredCapacity: 1
      VPCZoneIdentifier: !Ref ApplicationSubnets
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ApplicationAutoscaling-instance
          PropagateAtLaunch: "true"

  ApplicationAutoscalingInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: ApplicationAutoscalingInstanceRole

  InstanceTaggingPolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      Description: Policy for allow tagging
      Path: /
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
            - 'ec2:DescribeTags'
            - 'ec2:DescribeVolumes'
            Resource: '*'
          - Effect: Allow
            Action: 'ec2:CreateTags'
            Resource: !Join 
              - ':'
              - - 'arn:aws:ec2'
                - !Ref 'AWS::Region'
                - !Ref 'AWS::AccountId'
                - 'volume/*'

  InstanceContainerPolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      Description: Policy for allow tagging
      Path: /
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
            - 'ecs:RegisterContainerInstance'
            - 'ecs:DeregisterContainerInstance'
            - 'ecs:UpdateContainerInstancesState'
            Resource: !Sub ${ApplicationCluster.Arn}
          - Effect: Allow
            Action:
            - 'ecs:DiscoverPollEndpoint'
            - 'ecs:Submit*'
            - 'ecs:Poll'
            - 'ecs:StartTelemetrySession'
            Resource: "*"
          - Effect: Allow
            Action:
            - 'logs:CreateLogGroup'
            - 'logs:CreateLogStream'
            - 'logs:PutLogEvents'
            - 'logs:DescribeLogStreams'
            Resource: "!Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/${AWS::StackName}*"

  ApplicationAutoscalingInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - {Ref: InstanceTaggingPolicy}
        - {Ref: InstanceContainerPolicy}

  ApplicationAutoscalingSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName} Application Autoscaling Security Group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # Uncomment the following lines for audit purposes on the docker instance
        # - IpProtocol: tcp
        #   FromPort: 22
        #   ToPort: 22
        #   CidrIp: !Ref MyInternetIP
        - IpProtocol: tcp
          FromPort: 5601
          ToPort: 5601
          SourceSecurityGroupId: !Ref ApplicationLoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          SourceSecurityGroupId: !Ref ApplicationLoadBalancerSecurityGroup

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets: !Ref ApplicationSubnets
      SecurityGroups:
        - !Ref ApplicationLoadBalancerSecurityGroup
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value : 30
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-alb

  ApplicationLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${AWS::StackName} Application Load Balancer Security Group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyInternetIP
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          CidrIp: !Ref MyInternetIP
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: ${AWS::StackName}-alb-sg

  KibanaLoadBalancerHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - TargetGroupArn: !Ref KibanaContainerTargetGroup
          Type: forward

  ElasticsearchLoadBalancerHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTP
      Port: 9200
      DefaultActions:
        - TargetGroupArn: !Ref ElasticsearchContainerTargetGroup
          Type: forward

  KibanaContainerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /app/kibana
      HealthCheckTimeoutSeconds: 5
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      Protocol: HTTP
      Port: 5601
      VpcId: !Ref VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30

  ElasticsearchContainerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 5
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      Protocol: HTTP
      Port: 9200
      VpcId: !Ref VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30

#################
## ECS
#################

  ApplicationCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Ref EcsClusterName

  ClusterLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join [ "", [ "/ecs/", !Ref EcsServiceName] ] 
      RetentionInDays: 3

  ApplicationTaskDefinitionELK:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: elk_family
      NetworkMode: host # All container should be able to talk each other using same network interface
      RequiresCompatibilities:
        - "EC2"
      Memory: "1.8GB"
      Cpu: "2048"
      ContainerDefinitions:
        - Name: elasticsearch
          Image: !Ref ImgElasticsearch
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ClusterLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: elasticsearch
          MemoryReservation: 800
          PortMappings:
            - ContainerPort: 9200
              HostPort: 9200
              Protocol: TCP
            - ContainerPort: 9300
              HostPort: 9300
              Protocol: TCP
          Hostname: elasticsearch
          ExtraHosts:
            - Hostname: kibana
              IpAddress: 127.0.0.1
            - Hostname: logstash
              IpAddress: 127.0.0.1
          Environment:
            - Name: bootstrap.memory_lock
              Value: true
            - Name: cluster.name
              Value: cloudwatch-cluster
            - Name: discovery.zen.minimum_master_nodes
              Value: 1
            - Name: ES_JAVA_OPTS
              Value: "-Xms512m -Xmx512m"
            - Name: http.host
              Value: 0.0.0.0
            - Name: transport.host
              Value: 0.0.0.0
          Ulimits:
            - Name: memlock
              HardLimit: -1
              SoftLimit: -1
            - Name: nofile
              HardLimit: 65536
              SoftLimit: 65536
        - Name: kibana
          Image: !Ref ImgKibana
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ClusterLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: kibana
          MemoryReservation: 300
          DependsOn:
            - Condition: START
              ContainerName: elasticsearch
          PortMappings:
            - ContainerPort: 5601
              HostPort: 5601
              Protocol: TCP
          Hostname: kibana
          ExtraHosts:
            - Hostname: elasticsearch
              IpAddress: 127.0.0.1
            - Hostname: logstash
              IpAddress: 127.0.0.1
        - Name: logstash
          Image: !Ref ImgLogstash
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ClusterLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: logstash
          MemoryReservation: 500
          DependsOn:
            - Condition: START
              ContainerName: elasticsearch
          PortMappings:
            - ContainerPort: 5000
              HostPort: 5000
              Protocol: TCP
          Hostname: logstash
          ExtraHosts:
            - Hostname: elasticsearch
              IpAddress: 127.0.0.1
            - Hostname: kibana
              IpAddress: 127.0.0.1

  ApplicationService:
    DependsOn:
    - KibanaLoadBalancerHttpListener
    - ElasticsearchLoadBalancerHttpListener
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref ApplicationCluster
      DesiredCount: 0
      HealthCheckGracePeriodSeconds: 2000
      LoadBalancers:
        - ContainerName: kibana
          ContainerPort: 5601
          TargetGroupArn: !Ref KibanaContainerTargetGroup
        - ContainerName: elasticsearch
          ContainerPort: 9200
          TargetGroupArn: !Ref ElasticsearchContainerTargetGroup
      DeploymentConfiguration:
        MinimumHealthyPercent: 100
        MaximumPercent: 200
      TaskDefinition: !Ref ApplicationTaskDefinitionELK
      ServiceName: !Ref EcsServiceName
      LaunchType: EC2
      SchedulingStrategy: REPLICA
      #Role: !Sub arn:aws:iam::${AWS::AccountId}:role/aws-service-role/ecs.amazonaws.com/AWSServiceRoleForECS

#################
## OUTPUT
#################

Outputs:
  TemplateVersion:
    Description: The version of the template used by Create Cluster Wizard
    Value: '2.0.0'

  PublicURL:
    Description: Public DNS name of Application Load Balancer
    Value: !Sub ${ApplicationLoadBalancer.DNSName}
